crates/ika/tests/snapshots/ptb_files_tests__move_call_parsing.ptb.snap
---
source: crates/ika/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --move-call invalid_access 
   ·                           ▲
   ·                           ╰── Expected '::' but found end of input
   ╰────

