crates/ika/tests/snapshots/ptb_files_tests__non_integer_gas_budget.ptb.snap
---
source: crates/ika/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --gas-budget @0x1 
   ·              ──┬─
   ·                ╰── Expected a u64 value
   ╰────

